# internal-service-health-dashboard

./: .gitignore  README.md  compose.yaml
backend/: alembic.ini  dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2e9ad7260c7e_add_degraded_reason_to_services.py  f874b26137f0_create_services_table.py
backend/app/: main.py  seed.py  wait_for_db.py
backend/app/api/routes/: services.py
backend/app/core/: config.py
backend/app/crud/: service.py
backend/app/db/: base.py  session.py
backend/app/domain/: service_rules.py
backend/app/models/: service.py
backend/app/schemas/: service.py
backend/tests/: conftest.py  test_service_rules.py
frontend/: dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts
frontend/src/components/: ServiceCard.tsx  StatusBadge.test.tsx  StatusBadge.tsx
